# vmm

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  types.rs  utils.rs
src/types/: bytemuck_impl.rs  macros.rs  math.rs  matrices.rs  vectors.rs
src/types/matrices/: math.rs
src/types/vectors/: math.rs
