[package]
name = "vmm"
version = "0.2.1"
edition = "2021"
description = "A math library focused on vectors and square matrices (Not in development)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Cunha-Renato/vmm" 

[lib]
name = "vmm"
crate-type = ["lib"]

[dependencies]
bytemuck = "1.14.1"